<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/cari_buah"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_list"
        android:title="@string/list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_grid"
        android:title="@string/grid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cardview"
        android:title="@string/with_cardview"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>