<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_img_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/alpukat"/>

        <TextView
            android:id="@+id/tv_name_detail"
            style="@style/TextContent.Black"
            android:textSize="32sp"
            android:text="@string/fruits_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/tv_english_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fruits_name"
            android:textColor="@color/colorWhite"
            app:chipBackgroundColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextContent"
            android:text="@string/detail"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/manfaat_buah"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="8dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/angka"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/tv_benefit"
                    style="@style/TextSpec.Value"
                    android:text="@string/manfaat_buah" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>